# CollegePredictor-MK97

./: CPA.csv  main.py  pyproject.toml
