[project]
name = "collegepredictor"
version = "0.1.0"
description = "A Streamlit-based college predictor app"
readme = "README.md"
requires-python = ">=3.11"
package-mode = false 

authors = [
  { name = "Sachin Kumawat", email = "Sachinhecker@gmail.com" }
]

dependencies = [
  "streamlit>=1.35.0",
  "pandas>=2.2.2"
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
