[tool.poetry]
name = "collegepredictor"
version = "0.1.0"
description = "A Streamlit-based college predictor app"
authors = ["Sachin Kumawat Sachinhecker@gmail.com"]
package-mode = false  # 

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = "^1.35.0"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
